--- a/movies-app/pom.xml
+++ b/movies-app/pom.xml
@@ -15,9 +15,8 @@
 
     <repositories>
         <repository>
-            <id>MuleRepository</id>
-            <name>MuleRepository</name>
-            <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
@@ -91,12 +90,11 @@
             <version>2.24.1</version>
             <scope>test</scope>
         </dependency>
-        <!-- dependency>
+        <dependency>
             <groupId>com.github.JensPiegsa</groupId>
             <artifactId>wiremock-extension</artifactId>
             <version>0.4.0</version>
-            <scope>test</scope>
-        </dependency -->
+        </dependency>
     </dependencies>
 
     <build>
